# Nemotron

./: .gitignore  CHANGELOG.md  README.md  justfile  pyproject.toml
.github/workflows/: cicd-main.yml.disabled  copyright-check.yml.disabled  docs-deploy.yml  docs-preview.yml
docs/: conf.py  index.md  project.json  usage-cookbook  use-case-examples  versions.json
docs/_static/css/: termynal.css
docs/_static/js/: termynal-init.js  termynal.js
docs/architecture/: README.md  cli-architecture.md  design-philosophy.md
docs/nemo_runspec/: nemo-run.md  omegaconf.md
docs/nemotron/: artifacts.md  cli.md  data-prep.md  kit.md  nvidia-stack.md  wandb.md  xenna-observability.md
docs/nemotron/nano3/: README.md  evaluate.md  import.md  pretrain.md  rl.md  sft.md
docs/runspec/v1/: spec.md
scripts/: test_pack_memory.py
src/nemo_runspec/: README.md  __init__.py  _models.py  _parser.py  artifact_registry.py  cli_context.py  display.py  env.py  evaluator.py  exceptions.py  execution.py  filesystem.py  help.py  pipeline.py  recipe_config.py  recipe_typer.py  run.py  squash.py  step.py  utils.py
src/nemo_runspec/config/: __init__.py  loader.py  resolvers.py
src/nemo_runspec/packaging/: __init__.py  code_packager.py  self_contained_packager.py
src/nemo_runspec/templates/: ray_cpu.sub.j2
src/nemotron/: __init__.py  __main__.py
src/nemotron/cli/: README.md  __init__.py
src/nemotron/cli/commands/: __init__.py
src/nemotron/cli/kit/: __init__.py  app.py  squash.py
src/nemotron/data_prep/: README.md  __init__.py  api.py  blend.py  config.py
src/nemotron/data_prep/core/: __init__.py  chat_sft_shard_core.py  chat_template.py  finalize.py  jsonl_shard_core.py  planning.py  providers.py  receipt.py  shard_processor.py  work_items.py
src/nemotron/data_prep/formats/: __init__.py  indexed_dataset.py  jsonl_dataset.py  transforms.py
src/nemotron/data_prep/observability/: __init__.py  stage_keys.py  wandb_hook.py
src/nemotron/data_prep/packing/: __init__.py  algorithms.py  bin_assignment.py  builder.py  materialize.py  spool.py  writers.py
src/nemotron/data_prep/recipes/: __init__.py  execution_mode.py  pretrain.py  rl.py  sft.py
src/nemotron/data_prep/stages/: __init__.py  context.py  download.py  jsonl_plan.py  jsonl_write.py  megatron_bin_idx.py  packed_sft_parquet.py  plan.py  sft_plan.py
src/nemotron/data_prep/templates/: nano3.jinja
src/nemotron/data_prep/utils/: __init__.py  discovery.py  filesystem.py  hf_env.py  hf_placeholder.py  size.py  splits.py
src/nemotron/kit/: README.md  __init__.py  artifact.py  megatron_stub.py  recipe_loader.py  trackers.py  train_script.py  wandb_kit.py
src/nemotron/recipes/: README.md  __init__.py
tests/data_prep/: __init__.py  test_bin_assignment.py  test_binidx_stage_resume.py  test_blend.py  test_config.py  test_jsonl_pipeline.py  test_packing_algorithms.py  test_packing_builder.py  test_row_splitting.py  test_size.py  test_stage_keys.py  test_transforms.py  test_wandb_hook.py
tests/kit/: __init__.py  test_artifact.py  test_ast_inliner.py  test_code_packager.py  test_pipeline.py  test_recipe_loader.py  test_registry.py  test_resolvers_pre_init.py  test_self_contained_packager.py  test_step.py  test_wandb_patch.py
tests/kit/cli/: test_utils.py
tests/nemo_runspec/: test_evaluator.py  test_filesystem.py
tests/recipes/: __init__.py
tests/recipes/nano3/: __init__.py
usage-cookbook/Nemotron-3-Super/: vllm_cookbook.ipynb
(+75 files in other folders)
